# uart-to-azureiot

./: .gitmodules  LICENSE.txt  README.ja.md  README.md
app/uart-to-azureiot-hlapp/: AzureDeviceClient.c  AzureDeviceClient.h  BytesSpan.c  BytesSpan.h  CMakeLists.txt  Exit.c  Exit.h  Gpio.c  Gpio.h  MessageParser.c  MessageParser.h  Termination.c  Termination.h  Uart.c  Uart.h  app_manifest.json  app_manifest.json.iothub  applibs_versions.h  main.c
examples/arduino/telemetry/: telemetry.ino
hardware-definitions/: README.md  uart-to-azureiot.json
hardware-definitions/inc/hw/: uart-to-azureiot.h
lib/eventloop_timer_utilities/: CMakeLists.txt
lib/parson/: CMakeLists.txt
media/: contents.pptx
